# U2MIDI

./: .gitignore  .gitmodules  README.md  bar_detection.ipynb  bar_detection_test.ipynb  bar_detection_ver2.ipynb
boards/: main.brd  main.cam  main.sch  sub.brd  sub.cam  sub.sch
boards/main/: main.cmp  main.drd  main.plc  main.pls  main.sol  main.stc  main.sts
boards/main/CAMOutputs/GerberFiles/: gerber_job.gbrjob
boards/main2/: main.cmp  main.drd  main.plc  main.pls  main.sol  main.stc  main.sts
boards/main2/CAMOutputs/GerberFiles/: gerber_job.gbrjob
boards/sub/: sub.cmp  sub.drd  sub.plc  sub.sol  sub.stc  sub.sts
boards/sub/CAMOutputs/GerberFiles/: gerber_job.gbrjob
firmware/: .mxproject  CMakeLists.txt  Makefile  Uplight.ioc
firmware/Core/Inc/: led.h  main.h  main_cycle.h  stm32f1xx_hal_conf.h
firmware/Core/Src/: gpio.c  led.c  main.c  main_cycle.c  spi.c  stm32f1xx_it.c  tim.c
firmware/Middlewares_MIDI/ST/STM32_USB_Device_Library/Class/USBMIDI/Inc/: usbd_midi.h
firmware/Middlewares_MIDI/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c
firmware/USB_DEVICE_MIDI/App/: curebuffer.c  usb_device.c  usb_device.h  usbd_midi_if.c
firmware/Uplight/: .mxproject  Makefile  Uplight.ioc
firmware/Uplight/Core/Inc/: main.h  stm32f1xx_hal_conf.h
firmware/Uplight/Core/Src/: gpio.c  main.c  spi.c
firmware/Uplight/Middlewares_MIDI/ST/STM32_USB_Device_Library/Class/USBMIDI/Src/: usbd_midi.c
firmware/Uplight/USB_DEVICE_MIDI/App/: curemisc.h  usbd_desc.c  usbd_midi_if.c  usbd_midi_if.h
firmware_f405/: .mxproject  CMakeLists.txt  Makefile  STM32F405RGTx_FLASH.ld  Uplight.ioc
firmware_f405/Core/Inc/: main.h  stm32f4xx_it.h
firmware_f405/Core/Src/: gpio.c  main.c  stm32f4xx_it.c
firmware_f405/Middlewares_MIDI/ST/STM32_USB_Device_Library/Class/USBMIDI/Src/: usbd_midi.c
firmware_f405/Middlewares_MIDI/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c
firmware_f405/USB_DEVICE/App/: usbd_desc.c
firmware_f405/USB_DEVICE_MIDI/App/: usb_device.c  usb_device.h  usbd_desc.c  usbd_midi_if.c
firmware_f405/stm32-core/: syscall.c  sysmem.c
software/: CMakeLists.txt  loop
software/include/: recognize.hpp
software/src/: main.cpp  recognize.cpp
web/: index.html  index.js  style.css  style.css.map  style.scss  video.html  video.js  youtube.html  youtube.js
web/components/: footer.js  navbar.js  practice_component.js  scoring_component.js  video-list.js  video_list.js
web/practice/: 0.html  1.html  2.html  3.html  4.html  5.html  custom.html
web/result/: 2.html  4.html
web/scoring/: 0.html  1.html  2.html  3.html  4.html  5.html  custom.html  scoring.js
